Fixed bug with nav showing automatically on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,7 @@ nav {
 }
 
 .primarynav {
+  display: none;
   font-size: 1.5em;
   height: 100%;
   text-align: center;
